[workspace]
resolver = "2"
members = [
    "bin/arb",
    "bin/relay",
    "crates/arb-common",
    "crates/dex-indexer",
    "crates/logger",
    "crates/object-pool",
    "crates/shio",
    "crates/simulator",
    "crates/utils",
    "crates/version",
]

[workspace.dependencies]
dex-indexer = { path = "crates/dex-indexer" }
mev_logger = { path = "crates/logger" }
object-pool = { path = "crates/object-pool" }
shio = { path = "crates/shio" }
simulator = { path = "crates/simulator" }
utils = { path = "crates/utils" }
version = { path = "crates/version" }
primitive-types = "0.13"

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
sui-network = { git = "https://github.com/suiflow/mevsui", branch = "relay-patch" }
sui-types = { git = "https://github.com/suiflow/mevsui", branch = "relay-patch" }
sui-core = { git = "https://github.com/suiflow/mevsui", branch = "relay-patch" }
sui-execution = { git = "https://github.com/suiflow/mevsui", branch = "relay-patch" }
sui-sdk = { git = "https://github.com/suiflow/mevsui", branch = "relay-patch" }
sui-config = { git = "https://github.com/suiflow/mevsui", branch = "relay-patch" }
sui-json-rpc = { git = "https://github.com/suiflow/mevsui", branch = "relay-patch" }
sui-json-rpc-types = { git = "https://github.com/suiflow/mevsui", branch = "relay-patch" }
sui-indexer = { git = "https://github.com/suiflow/mevsui", branch = "relay-patch" }
mysten-network = { git = "https://github.com/suiflow/mevsui", branch = "relay-patch" }
typed-store = { git = "https://github.com/suiflow/mevsui", branch = "relay-patch" }
move-bytecode-utils = { git = "https://github.com/suiflow/mevsui", branch = "relay-patch" }
move-core-types = { git = "https://github.com/suiflow/mevsui", branch = "relay-patch" }
shared-crypto = { git = "https://github.com/suiflow/mevsui", branch = "relay-patch" }

# sui-network = { git = "https://github.com/suiflow/mevsui", branch = "monitor-pool-related-objects" }
# sui-types = { git = "https://github.com/suiflow/mevsui", branch = "monitor-pool-related-objects" }
# sui-core = { git = "https://github.com/suiflow/mevsui", branch = "monitor-pool-related-objects" }
# sui-execution = { git = "https://github.com/suiflow/mevsui", branch = "monitor-pool-related-objects" }
# sui-sdk = { git = "https://github.com/suiflow/mevsui", branch = "monitor-pool-related-objects" }
# sui-config = { git = "https://github.com/suiflow/mevsui", branch = "monitor-pool-related-objects" }
# sui-json-rpc = { git = "https://github.com/suiflow/mevsui", branch = "monitor-pool-related-objects" }
# sui-json-rpc-types = { git = "https://github.com/suiflow/mevsui", branch = "monitor-pool-related-objects" }
# sui-indexer = { git = "https://github.com/suiflow/mevsui", branch = "monitor-pool-related-objects" }
# mysten-network = { git = "https://github.com/suiflow/mevsui", branch = "monitor-pool-related-objects" }
# typed-store = { git = "https://github.com/suiflow/mevsui", branch = "monitor-pool-related-objects" }
# move-bytecode-utils = { git = "https://github.com/suiflow/mevsui", branch = "monitor-pool-related-objects" }
# move-core-types = { git = "https://github.com/suiflow/mevsui", branch = "monitor-pool-related-objects" }
# shared-crypto = { git = "https://github.com/suiflow/mevsui", branch = "monitor-pool-related-objects" }

async-trait = "0.1.61"
async-stream = "0.3"
tonic = { version = "0.12", features = ["transport"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
bcs = "0.1.6"
prometheus = "0.13.3"
once_cell = "1.19.0"
itertools = "0.13.0"
eyre = "0.6.12"
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["unbounded_depth"] }
lazy_static = "1.5"
regex = "1.11"
cached = { version = "0.54", features = ["default", "async"] }
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = { version = "6.0", features = ["serde"] }
burberry = { git = "https://github.com/tonyke-bot/burberry.git", rev = "8bdb3cadf18e9be01622f9acbe562ee2d4f65ac2", default-features = false, features = [
    "telegram",
] }
async-channel = "2.1"
num_cpus = "1.16"
bincode = "1.3.3"
interprocess = { version = "2", features = ["tokio"] }
rayon = "1.10"

[profile.release]
debug = true
