[package]
name = "dex-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
utils.workspace = true
shio.workspace = true
simulator.workspace = true
dashmap.workspace = true
burberry.workspace = true
sui-sdk.workspace = true
eyre.workspace = true
mev_logger.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
async-stream.workspace = true
futures.workspace = true
reqwest.workspace = true
rand.workspace = true
cached.workspace = true
move-core-types.workspace = true
bcs.workspace = true
sui-json-rpc-types.workspace = true
sui-types.workspace = true
rayon.workspace = true
