[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
sui-core.workspace = true
sui-config.workspace = true
sui-execution.workspace = true
sui-indexer.workspace = true
sui-json-rpc.workspace = true
sui-json-rpc-types.workspace = true
sui-sdk.workspace = true
sui-types.workspace = true
eyre.workspace = true
prometheus.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
move-core-types.workspace = true
bcs.workspace = true
